# Acordes

./: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  chord_engine.cpp  chord_engine.h  jni_bridge.cpp
app/src/main/cpp/kissfft/: kiss_fft.c  kiss_fft.h
app/src/main/kotlin/com/acordes/detector/: ChordDetector.kt  ChordViewModel.kt  MainActivity.kt
app/src/main/kotlin/com/acordes/detector/ui/: ChordScreen.kt  Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
